--- a/templates/BasePage.html
+++ b/templates/BasePage.html
@@ -34,5 +34,6 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script type="text/javascript" src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/MyScripts.js' %}"></script>
 </body>
 </html>
