--- a/templates/Threads_page_header.html
+++ b/templates/Threads_page_header.html
@@ -4,9 +4,10 @@
 {% block threads_page_header %}
     <div class="col-lg-12">
         <div class="panel panel-primary">
-                <div class="panel-heading" id="threads_header_panel_header">
+            <div class="panel-heading" id="threads_header_panel_header">
                 {% if user.is_anonymous %}
-                    <a href="{% url 'home' %}">Dashboard</a> | <a href="{% url 'user_login' %}">Login</a>
+                    <a href="{% url 'home' %}">Dashboard</a> |
+                    <a href="{% url 'user_login' %}">Login</a>
                 {% else %}
                     <a href="{% url 'home' %}">Dashboard</a> | {{ user }}
                 {% endif %}
@@ -15,22 +16,72 @@
                 <div class="media">
                     <div class="media-body">
                         <dl class="dl-horizontal">
-                            {% for key, value in main_categories.items %}
-                                <dt>
-                                    {{ key }}
-                                </dt>
-                                <dd>
-                                    <ul class="csv">
-                                        {% for sub_cat in value %}
-                                            <li><a href="{% url 'threads_category_page' sub_cat.id %}">{{ sub_cat }}</a></li>
-                                        {% endfor %}
-                                    </ul>
-                                </dd>
-                            {% endfor %}
+                            <dt>Hobbies</dt>
+                            <dd>
+                                <ul class="csv">
+                                    {% for sub_cat in main_categories.Hobbies %}
+                                        <li>
+                                            <a href="{% url 'threads_category_page' sub_cat.id %}">{{ sub_cat }}</a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </dd>
+                            <dt>Hi-Tech</dt>
+                            <dd>
+                                <ul class="csv">
+                                    {% for sub_cat in main_categories.Hi_Tech %}
+                                        <li>
+                                            <a href="{% url 'threads_category_page' sub_cat.id %}">{{ sub_cat }}</a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </dd>
+                            <dt>Talks</dt>
+                            <dd>
+                                <ul class="csv">
+                                    {% for sub_cat in main_categories.Talks %}
+                                        <li>
+                                            <a href="{% url 'threads_category_page' sub_cat.id %}">{{ sub_cat }}</a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </dd>
                         </dl>
+                        {% if main_categories.Big_Boss %}
+                            <div class="col-lg-6">
+                                <dl class="dl-horizontal">
+                                    <dt>Big Boss</dt>
+                                    <dd>
+                                        <ul class="csv">
+                                            {% for sub_cat in main_categories.Big_Boss %}
+                                                <li>
+                                                    <a href="{% url 'threads_category_page' sub_cat.id %}">{{ sub_cat }}</a>
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                    </dd>
+                                </dl>
+                            </div>
+                            <div class="col-lg-5">
+                                <dl class="dl-horizontal">
+                                    <dt>HR</dt>
+                                    <dd>
+                                        <ul class="csv">
+                                            {% for sub_cat in main_categories.HR %}
+                                                <li>
+                                                    <a href="{% url 'threads_category_page' sub_cat.id %}">{{ sub_cat }}</a>
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                    </dd>
+                                </dl>
+                            </div>
+                        {% endif %}
                     </div>
                     <div class="media-right">
-                        <img class="media-object logo_image" src="{% static 'site_images/Logo.jpg' %}" alt="{% static 'site_images/ImageNot.jpg' %}">
+                        <img class="media-object logo_image"
+                             src="{% static 'site_images/Logo.jpg' %}"
+                             alt="{% static 'site_images/ImageNot.jpg' %}">
                     </div>
                 </div>
             </div>
