--- a/templates/Threads_page_content.html
+++ b/templates/Threads_page_content.html
@@ -4,88 +4,82 @@
 
 
 {% block threads_page_content %}
-    <div class="col-lg-12">
-        <div class="well" id="thread_category_header">
-            <div class="row">
-                <div class="col-lg-9 col-lg-offset-1">
-                    <h3>{{ request.session.category_title }}</h3>
-                </div>
-                <div class="col-lg-1" id="show_add_thread_form_div">
-                    <a class="btn btn-primary" id="show_add_thread_form">
-                        Add Thread
-                    </a>
-                </div>
+        <div class="col-lg-9 col-lg-offset-1" id="thread_category_header">
+            <h3>{{ threads_category_tittle }}</h3>
+        </div>
+        <div class="col-lg-2" id="show_add_thread_form_div">
+            <a class="btn btn-primary" id="show_add_thread_form">
+                Add Thread
+            </a>
+        </div>
+    <div class="col-lg-8 col-lg-offset-2">
+        <div class="panel panel-primary" id="new_thread_panel">
+            <div class="panel-heading" id="new_thread_panel_header">
+                <h4>New thread</h4>
+            </div>
+            <div class="panel-body">
+                <form action='/new_thread/' method="post">
+                    {% csrf_token %}
+                    {% bootstrap_form form %}
+                    <input type="submit" class="btn btn-success"
+                           value="Create new thread">
+                </form>
             </div>
         </div>
-        <div class="col-lg-8 col-lg-offset-2">
-            <div class="panel panel-primary" id="new_thread_panel">
-                <div class="panel-heading" id="new_thread_panel_header">
-                    <h4>New thread</h4>
+    </div>
+    <div class="col-lg-12">
+        {% for key, value in threads_with_replies.items %}
+            <div class="panel panel-default">
+                <div class="panel-heading clearfix">
+                    <div class="col-lg-8" id="thread_title"><h4>
+                        #{{ key.id }}
+                        | {{ key.thread_title }}</h4></div>
+                    <div class="col-lg-3" id="thread_date">
+                        <p>Created : {{ key.thread_date }}</p>
+                    </div>
+                    <div class="col-lg-1">
+                        <a class="btn btn-success"
+                           href="{% url 'thread_page' key.id %}">Reply</a>
+                    </div>
                 </div>
                 <div class="panel-body">
-                    <form action='/new_thread/' method="post">
-                        {% csrf_token %}
-                        {% bootstrap_form form %}
-                        <input type="submit" class="btn btn-success"
-                               value="Create new thread">
-                    </form>
+                    <div class="media">
+                        <div class="media-left">
+                            <img class="media-object logo_image"
+                                 src="http://{{ request.get_host }}/{{ key.thread_image }}"
+                                 alt="Thread image">
+                        </div>
+                        <div class="media-body">
+                            <p>{{ key.thread_text }}</p>
+
+                            <p>Replies:
+                                {% for reply in value %}
+                                    <a href="{% url 'thread_page' key.id reply.id %}">#{{ reply.id }} </a>
+                                {% endfor %}
+                            </p>
+                        </div>
+                        {% for reply in value %}
+                            <div class="well reply">
+                                <div class="row">
+                                    <div class="col-lg-11">
+                                        <p>#{{ reply.id }} Created
+                                            : {{ reply.reply_date }}</p>
+
+                                        <p>>> {{ key.thread_title }}</p>
+                                    </div>
+                                </div>
+                                {{ reply.reply_text }}
+                            </div>
+                        {% empty %}
+                            <div class="well reply">
+                                This thread has no replies.... Yours will
+                                be the first!!!
+                            </div>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-12">
-            {% for key, value in threads_with_replies.items %}
-                <div class="panel panel-primary">
-                    <div class="panel-heading clearfix">
-                        <div class="col-lg-8" id="thread_title"><h4>
-                            #{{ key.id }}
-                            | {{ key.thread_title }}</h4></div>
-                        <div class="col-lg-3" id="thread_date">
-                            <p>Created : {{ key.thread_date }}</p>
-                        </div>
-                        <div class="col-lg-1">
-                            <a class="btn btn-success"
-                               href="{% url 'thread_page' key.id %}">Reply</a>
-                        </div>
-                    </div>
-                    <div class="panel-body">
-                        <div class="media">
-                            <div class="media-left">
-                                <img class="media-object logo_image"
-                                     src="http://{{ request.get_host }}/{{ key.thread_image }}"
-                                     alt="Thread image">
-                            </div>
-                            <div class="media-body">
-                                <p>{{ key.thread_text }}</p>
-
-                                <p>Replies:
-                                    {% for reply in value %}
-                                        <a href="{% url 'thread_page' key.id reply.id %}">#{{ reply.id }} </a>
-                                    {% endfor %}
-                                </p>
-                            </div>
-                            {% for reply in value %}
-                                <div class="well reply">
-                                    <div class="row">
-                                        <div class="col-lg-11">
-                                            <p>#{{ reply.id }} Created
-                                                : {{ reply.reply_date }}</p>
-
-                                            <p>>> {{ key.thread_title }}</p>
-                                        </div>
-                                    </div>
-                                    {{ reply.reply_text }}
-                                </div>
-                            {% empty %}
-                                <div class="well reply">
-                                    This thread has no replies.... Yours will
-                                    be the first!!!
-                                </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
+        {% endfor %}
     </div>
 
 {% endblock %}
