--- a/templates/Threads_page_header.html
+++ b/templates/Threads_page_header.html
@@ -61,7 +61,7 @@
                     <div class="media-right">
                         <img class="media-object logo_image"
                              src="{% static 'site_images/Logo.jpg' %}"
-                             alt="{% static 'site_images/ImageNot.jpg' %}">
+                             alt="Logo.jpg">
                     </div>
                 </div>
             </div>
