--- a/templates/Dashboard_page_header.html
+++ b/templates/Dashboard_page_header.html
@@ -30,6 +30,7 @@
     </div>
     <div class="row">
         {% block login_page %}{% endblock %}
+        {% block registration_page %}{% endblock %}
         {% block dashboard_page_content %}{% endblock %}
     </div>
 {% endblock %}
