--- a/templates/LoginPage.html
+++ b/templates/LoginPage.html
@@ -3,12 +3,13 @@
 {% load bootstrap3 %}
 
 {% block login_page %}
-    <div class="col-lg-4 col-lg-offset-4 ">
-        <h3>Ну ты понял!!!</h3>
+    <div class="col-lg-4 col-lg-offset-4">
+        <h3 style="text-align: center">Login</h3>
         <form action="" method="post" id="loginForm">
             {% csrf_token %}
             {% bootstrap_form form %}
-            <input type="submit" class="btn btn-success" value="Захады ! ! !">
+            <input type="submit" class="btn btn-success" value="Login">
         </form>
+        <a href="{% url 'user_register' %}">Registration</a>
     </div>
 {% endblock %}
